# GES

./: .gitignore  LICENSE  README.md  collect_nohup.py  environment.yml  eval_fps.sh  gl_eval.py  render.py  train.py  train_all.sh
arguments/: __init__.py
gaussian_renderer/: __init__.py
ges_viewer/: CMakeLists.txt
ges_viewer/include/: binaryattribute.h  camera.h  editor.h  eval_viewer.h  framebuffer.h  gaussianCloud.h  mathutil.h  ply.h  renderer.h  serializer.h  shaderProgram.h  util.h  vertexbuffer.h  viewer.h
ges_viewer/include/glad/include/glad/: glad.h
ges_viewer/include/glad/src/: glad.c
ges_viewer/main/: eval.cpp  main.cpp
ges_viewer/shader/: blur_frag.glsl  clip_vert.glsl  ms_frag.glsl  norm_frag.glsl  splat_frag_geo.glsl  splat_frag_geo_precise.glsl  splat_frag_tex.glsl  splat_frag_tex3D.glsl  splat_geom_geo.glsl  splat_geom_tex.glsl  splat_geom_tex3D.glsl  splat_vert.glsl  splat_vert3D.glsl
ges_viewer/src/: camera.cpp  editor.cpp  eval_viewer.cpp  framebuffer.cpp  gaussianCloud.cpp  ply.cpp  renderer.cpp  serializer.cpp  shaderProgram.cpp  util.cpp  vertexbuffer.cpp  viewer.cpp
lpipsPyTorch/: __init__.py
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
submodules/ges_rasterization_init2D/: rasterize_points.cu  rasterize_points.h  setup.py
submodules/ges_rasterization_joint_g/: rasterize_points.cu  rasterize_points.h  setup.py
submodules/ges_rasterization_joint_s/: ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
utils/: camera_utils.py  general_utils.py  image_utils.py  point_utils.py
(+39 files in other folders)
